<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Testing sequences</string>
					<string name="res0">Button 1 Stopped</string>
					<string name="res1">Button 2 Stopped</string>
					<string name="res2">Button 3 Looping...</string>
					<string name="res3">Foo, bar</string>
					<string name="res4">Bar, Foo</string>
					<string name="res5">Boo, Far</string>
				</resources>
